# blog

./: .gitignore  Cargo.toml  README.md  clean.sh  test.md
.github/workflows/: deploy.yml
md/: hello-void.md  hello-world.md  how-i-built-this.md  its-been-a-minute.md  neural-network-from-scratch.md  simple-guis-with-rust.md  snowflakes.md  the-joy-of-drowning.md  unlocking-parsers.md  year-of-the-linux-desktop.md
public/assets/: default.min.css  highlight.min.js  index.js
public/css/: index.css
public/html/: 403.html  404.html  about.html
public/rss/: rss.xml
src/: main.rs
templates/: archive.html  blog.html  home.html  rss.xml
