[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark="0.8"
askama = "0.10"
chrono = "*"
actix-web={version="3", features=["openssl"]}
actix-files="0.5"
openssl = "0.10"
